# frei0r-rife-transition

./: .clang-format  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  build.sh  install.sh  rife_transition.cpp
.github/workflows/: docker-build.yml
